<resources>
    <string name="app_name">Move Up</string>
    <string name="app_name_move_up_text">MOVE UP</string>
    <string name="condictum_text">Condictum</string>
    <string name="create_profile_text">Create profile</string>
    <string name="save_text">Save</string>
    <string name="cancel_text">Cancel</string>
    <string name="input_error_text">Error! Check the inputs.</string>
    <string name="try_again_button_text">TRY AGAIN</string>
    <string name="there_is_no_profile_please_create_a_new_profile">There is no profile. Please create a new profile.</string>
    <string name="there_is_no_goal_please_create_a_new_goal">There is no goal. Please create a new goal.</string>
    <string name="settings_text">Settings</string>
    <string name="profile_text">Profile</string>
    <string name="goals_text">Goals</string>
    <string name="name_text">Name</string>
    <string name="surname_text">Surname</string>
    <string name="age_text">Age</string>
    <string name="profiles_text">Profiles</string>
    <string name="results_text">Results</string>
    <string name="timer_text">Timer</string>
    <string name="edit_text">Edit</string>
    <string name="delete_text">Delete</string>
    <string name="profile_deleted_text">Profile deleted.</string>
    <string name="lesson_deleted_text">Lesson deleted.</string>
    <string name="are_you_sure_text">Are you sure?</string>
    <string name="profile_is_deleting_text">Profile is deleting…</string>
    <string name="lesson_is_deleting_text">Lesson is deleting…</string>
    <string name="yes_button_text">YES</string>
    <string name="no_button_text">NO</string>
    <string name="profile_isnt_deleted_text">Profile isn\'t deleted.</string>
    <string name="lesson_isnt_deleted_text">Lesson isn\'t deleted.</string>
    <string name="save_button_text">SAVE</string>
    <string name="edit_button_text">EDIT</string>
    <string name="lesson_edit_or_delete_menu_content_text">Lesson edit or delete menu.</string>
    <string name="update_lesson_text">Update lesson</string>
    <string name="formatted_score_text">Score: %s</string>
    <string name="formatted_lesson_text">Lesson: %s</string>
    <string name="click_and_add_new_lesson_text">Click and add new lesson.</string>
    <string name="lesson_name_text">Lesson name</string>
    <string name="lesson_score_text">Lesson score</string>
    <string name="create_lesson_text">Create lesson</string>
    <string name="lesson_text">Lesson</string>
    <string name="score_text">Score</string>
    <string name="exit_button_text">EXIT</string>
    <string name="details_text">Details</string>
    <string name="there_is_no_lesson_please_create_a_new_lesson">There is no lesson. Please create a new lesson.</string>
    <string name="total_score_text">Total score</string>
    <string name="formatted_total_score_text">Total Score: %s</string>
    <string name="there_is_no_lesson_for_chart_text">There is no lesson for chart.</string>
    <string name="scores_text">Scores</string>
    <string name="total_scores_text">Total Scores</string>
    <string name="last_date_of_goal_text">Last date of goal</string>
    <string name="there_is_no_time_data_for_lessons_chart_text">There is no time data for lessons.</string>
    <string name="goal_deleted_text">Goal deleted.</string>
    <string name="goal_isnt_deleted_text">Goal isn\'t deleted.</string>
    <string name="goal_is_deleting_text">Goal is deleting.</string>
    <string name="add_goal_text">Add Goal</string>
    <string name="about_botton_text">About</string>
    <string name="notifications_button_text">Notifications</string>
    <string name="goal_date_notification_message_formatted_text">Warning! %s day/days left for the exam.</string>
</resources>