<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/goalScreenFragment"
        android:icon="@drawable/ic_goals"
        android:title="@string/goals_text"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile_text"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/preparationsFragment"
        android:icon="@drawable/ic_work"
        android:title="@string/preparations_text"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings_text"
        app:showAsAction="ifRoom" />
</menu>