<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_screens"
    app:startDestination="@id/splashScreenFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="be.condictum.move_up.view.fragment.MainFragment"
        android:label="@string/profiles_text"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_mainFragment_to_goalScreenFragment"
            app:destination="@id/goalScreenFragment" />
    </fragment>
    <fragment
        android:id="@+id/splashScreenFragment"
        android:name="be.condictum.move_up.view.fragment.SplashScreenFragment"
        tools:layout="@layout/fragment_splash_screen">
        <action
            android:id="@+id/action_splashScreenFragment_to_mainFragment"
            app:destination="@id/mainFragment"
            app:popUpTo="@id/splashScreenFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/goalScreenFragment"
        android:name="be.condictum.move_up.view.fragment.GoalScreenFragment"
        android:label="@string/goals_text"
        tools:layout="@layout/fragment_goal_screen">
        <action
            android:id="@+id/action_goalScreenFragment_to_goalResultFragment"
            app:destination="@id/goalResultFragment"
            app:popUpTo="@id/goalScreenFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_goalScreenFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="be.condictum.move_up.view.fragment.SettingsFragment"
        android:label="@string/settings_text"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settingsFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/action_settingsFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
    </fragment>
    <fragment
        android:id="@+id/goalResultFragment"
        android:name="be.condictum.move_up.view.fragment.GoalResultFragment"
        android:label="@string/results_text">
        <action
            android:id="@+id/action_goalResultFragment_to_goalScreenFragment"
            app:destination="@id/goalScreenFragment"
            app:popUpTo="@id/goalResultFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="be.condictum.move_up.view.fragment.ProfileFragment"
        android:label="@string/profile_text"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_mainFragment"
            app:destination="@id/mainFragment"
            app:popUpTo="@id/profileFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="be.condictum.move_up.view.fragment.AboutFragment"
        android:label="@string/about_botton_text"
        tools:layout="@layout/fragment_about" />
</navigation>